# mdbook-langtabs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  publish.yml
assets/: langtabs.js
example-book/: book.toml
example-book/src/: examples.md
src/: languages.rs  lib.rs  main.rs  preprocessor.rs
