[package]
name = "mdbook-langtabs"
version = "0.1.0"
edition = "2024"
description = "An mdbook preprocessor that adds language tabs for code blocks"
license = "MIT"
repository = "https://github.com/nx10/mdbook-langtabs"
readme = "README.md"
keywords = ["mdbook", "preprocessor", "markdown", "language", "tabs"]
categories = ["text-processing", "command-line-utilities"]

[dependencies]
mdbook = "0.4.36"
serde_json = "1.0"
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "21.0"
regex = "1.10.2"
clap = "4.4"
toml = "0.8.20"
base64 = "0.22.1"
rand = "0.9.0"
uuid = { version = "1.4.1", features = ["v4"] }