[package]
name = "mdbook-langtabs"
version = "0.1.1"
edition = "2024"
description = "An mdbook preprocessor that adds language tabs for code blocks"
license = "MIT"
repository = "https://github.com/nx10/mdbook-langtabs"
readme = "README.md"
keywords = ["mdbook", "preprocessor", "markdown", "language", "tabs"]
categories = ["text-processing", "command-line-utilities"]

[dependencies]
mdbook = "0.4.48"
serde_json = "1.0"
regex = "1.10.2"
clap = "4.4"
toml_edit = "0.22.24"
